--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "deploy-script",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "start": "meteor run --port 3010",
     "deploy-staging": "node scripts/deploy.js staging",
